samples/_failures_safe/1761303823_0f63df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3b35d7b.c: In function ‘main’:
./samples/SAFE/__tmp_c3b35d7b.c:145:28: error: missing terminating " character
  145 |                     printf("Error: Matrices cannot be added (
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c3b35d7b.c:145:21: error: expected expression at end of input
  145 |                     printf("Error: Matrices cannot be added (
      |                     ^~~~~~
./samples/SAFE/__tmp_c3b35d7b.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3b35d7b.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3b35d7b.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3b35d7b.c:145:21: error: expected declaration or statement at end of input
